--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -8,6 +8,10 @@ description: Describes how long a Qiskit Runtime job can run, regardless of what
 
 To ensure fairness and help control costs, there is a maximum amount of time each Qiskit Runtime job can run. If a job exceeds this time limit, it is forcibly canceled and a `RuntimeJobMaxTimeoutError` exception is raised.
 
+ <Admonition>
+   If you use Qiskit Runtime on IBM Cloud, the session or batch is immediately terminated when the cost limit is reached.
+</Admonition>
+
 <span id="max-job"></span>
 ## Job maximum execution time
 
