--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -42,6 +42,7 @@ expectation values of observables corresponding to physical quantities or cost f
 
 ### Execution modes
 * [Introduction to execution modes](./execution-modes)
+* [Choose the right execution mode](./choose-execution-mode)
 * [Run jobs in a session](./run-jobs-session)
 * [Run jobs in a batch](./run-jobs-batch)
 * [Fixed and dynamic repetition rate execution](./repetition-rate-execution)
