--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -50,11 +50,13 @@ with Batch(backend=backend, max_time="25m"):
   ...
 ```
 
-There is also an interactive time to live (ITTL) value that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
+There is also an interactive time to live (interactive TTL) value that cannot be configured.  If no batch jobs are queued within that window, the batch is temporarily deactivated.
 
-To determine a batch's TTL or ITTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
+| Instance type (Open or Premium Plan) | Interactive TTL | Maximum TTL |
+| --- | --- | --- |
+| Both Open and Premium Plan | 1 sec | 10 min |
 
-For more information about these settings, see [Batch maximum execution time.](/guides/max-execution-time#batch-max-time)
+To determine a batch's max TTL or interactive TTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
 
 <span id="close"></span>
 ## Close a batch
