add note about spin chain porble.

--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -45,17 +45,18 @@
    "source": [
     "## Inputs and outputs\n",
     "### Inputs\n",
-    "| Name    | Type | Description | Required | Default | Example |\n",
-    "| ---------  | ---------------- | -------------------------- | -------- | ---------- | ---------- |\n",
-    "| problem  | `str`              | One of the representations listed under \"Accepted problem formats\" | Yes | N/A   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
-    "| problem_type  | `str`              | Name of the problem class; only used for graph problem definitions, which are limited to \"maxcut\"; not required for arbitrary objective function problem definitions   | No      | `None`| `\"maxcut\"`      |\n",
-    "| backend_name  | `str`              | Name of the backend to use      | No  | Least busy backend that your instance has access to    | `\"hub1/group1/project1\"`      |\n",
-    "| instance  | `str`              | The hub/group/project to use    | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"hub1/group1/project1\"`      |\n",
-    "| options  | `dict`              | Input options, including the following: (Optional) `session_id`: `str`; default behavior creates a new Session | No | `None`    | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
+    "| Name    | Type | Description                                                                                                                                                                                         | Required | Default | Example |\n",
+    "| ---------  | ---------------- |-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------| -------- | ---------- | ---------- |\n",
+    "| problem  | `str`              | One of the representations listed under \"Accepted problem formats\"                                                                                                                                  | Yes | N/A   |`Poly(2.0*n[0]*n[1] + 2.0*n[0]*n[2] - 3.13520241298341*n[0] + 2.0*n[1]*n[2] - 3.14469748506794*n[1] - 3.18897660121566*n[2] + 6.0, n[0], n[1], n[2], domain='RR')` |\n",
+    "| problem_type  | `str`              | Name of the problem class; only used for graph  and spin chain problem definitions, which are limited to \"maxcut\" or \"spin_chain\"; not required for arbitrary objective function problem definitions | No      | `None`| `\"maxcut\"`      |\n",
+    "| backend_name  | `str`              | Name of the backend to use                                                                                                                                                                          | No  | Least busy backend that your instance has access to    | `\"hub1/group1/project1\"`      |\n",
+    "| instance  | `str`              | The hub/group/project to use                                                                                                                                                                        | No   | A Premium access instance is randomly chosen if your account has access to multiple instances   | `\"hub1/group1/project1\"`      |\n",
+    "| options  | `dict`              | Input options, including the following: (Optional) `session_id`: `str`; default behavior creates a new Session                                                                                      | No | `None`    | `{\"session_id\": \"cw2q70c79ws0008z6g4g\"}`     |\n",
     "\n",
     "**Accepted problem formats:**\n",
     "- Polynomial expression representation of an objective function. Ideally created in Python with an existing SymPy Poly object and formatted into a string using [sympy.srepr](https://docs.sympy.org/latest/tutorials/intro-tutorial/printing.html#srepr).\n",
     "- Graph representation of a specific problem type. The graph should be created using the networkx library in Python. It should then converted to a string by using the networkx function `[nx.readwrite.json_graph.adjacency_data](http://nx.readwrite.json_graph.adjacency_data.)`.\n",
+    "- Spin chain representation of a specific problem. The spin chain should be represented by a `SparsePauliOp` object. This spin chain can be passed as a `SparsePauliOp` object, feel free to read the [documentation](https://docs.quantum.ibm.com/api/qiskit/qiskit.quantum_info.SparsePauliOp).\n",
     "\n",
     "**Supported backends:**\n",
     "The following list of backends are currently supported. If your device is not listed, [reach out to Q-CTRL](https://form.typeform.com/to/iuujEAEI?typeform-source=q-ctrl.com) to add support.\n",
