--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -6,7 +6,7 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 # Run jobs in a session
 
-There are several ways to set up and use [sessions](/guides/execution-modes).  It is recommended that you do not run a session with a single job in it.
+Use sessions when you need dedicated and exclusive access to the QPU.
 
 <Admonition type="note">
 Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
@@ -95,6 +95,8 @@ with Session(backend=backend, max_time="25m"):
 ```
 
 There is also an interactive time to live (interactive TTL) value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated.
+
+Default values:
 
 | Instance type (Open or Premium Plan) |  Interactive TTL | Maximum TTL |
 | --- | --- | --- |
