Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/qiskit-addons-utils.ipynb
+++ b/docs/guides/qiskit-addons-utils.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Qiskit addon utilities\n",
     "\n",
-    "The Qiskit addon utilities package is a collection of functionalities meant to supplement workflows involving one or more Qiskit addons. For example, this package contains functions for creating Hamiltonians, generating Trotter time evolution circuits, and slicing and combining quantum circuits.\n",
+    "The Qiskit addon utilities package is a collection of functionalities to supplement workflows involving one or more Qiskit addons. For example, this package contains functions for creating Hamiltonians, generating Trotter time-evolution circuits, and slicing and combining quantum circuits.\n",
     "\n",
     "## Installation\n",
     "\n",
@@ -34,7 +34,7 @@
     "git clone git@github.com:Qiskit/qiskit-addon-utils.git\n",
     "```\n",
     "\n",
-    "and install the package via `pip`. If you plan on running the tutorials found in the package repository, install the notebook dependencies as well. If you plan on developing in the repository, you may also want to install the `dev` dependencies.\n",
+    "and install the package via `pip`. If you plan to run the tutorials found in the package repository, install the notebook dependencies as well. If you plan to develop in the repository, install the `dev` dependencies.\n",
     "```bash\n",
     "pip install tox jupyterlab -e '.[notebook-dependencies,dev]'\n",
     "```\n",
@@ -42,23 +42,23 @@
     "\n",
     "## Get started with utilities\n",
     "\n",
-    "There are several modules within the `qiskit-addon-utils` package, including one for problem generation for simulating quantum systems, graph coloring to more efficiently place gates in a quantum circuit, as well as circuit slicing which can help with [operator backpropagation](./qiskit-addons-obp). Each module is summarized below. The package's [API docs](/api/qiskit-addon-utils/index) also contains helpful information.\n",
+    "There are several modules within the `qiskit-addon-utils` package, including one for problem generation for simulating quantum systems, graph coloring to more efficiently place gates in a quantum circuit, and circuit slicing, which can help with [operator backpropagation](/guides/qiskit-addons-obp). The following sections summarize each module. The package's [API documentation](/api/qiskit-addon-utils/index) also contains helpful information.\n",
     "\n",
     "### Problem generation\n",
     "\n",
     "The contents of the [`qiskit_addon_utils.problem_generators`](../api/qiskit-addon-utils/problem-generators) module include:\n",
     "\n",
-    "- A [`generate_xyz_hamiltonian()`](../api/qiskit-addon-utils/problem-generators#generate_xyz_hamiltonian) function which generates a connectivity-aware `SparsePauliOp` representation of an Ising-type XYZ model:\n",
+    "- A [`generate_xyz_hamiltonian()`](../api/qiskit-addon-utils/problem-generators#generate_xyz_hamiltonian) function, which generates a connectivity-aware `SparsePauliOp` representation of an Ising-type XYZ model:\n",
     "\n",
     "$$H = \\sum_{(j,k)\\in E} \\left(J_x X_jX_k + J_yY_jY_k + J_zZ_jZ_k\\right) + \\sum_{j\\in V} \\left(h_x X_j + h_y Y_j + h_z Z_j\\right) $$\n",
-    "- A [`generate_time_evolution_circuit()`](../api/qiskit-addon-utils/problem-generators#generate_time_evolution_circuit) function which constructs a circuit modeling the time evolution of a given operator.\n",
+    "- A [`generate_time_evolution_circuit()`](../api/qiskit-addon-utils/problem-generators#generate_time_evolution_circuit) function, which constructs a circuit modeling the time evolution of a given operator.\n",
     "- Three different [`PauliOrderStrategy`s](../api/qiskit-addon-utils/problem-generators#pauliorderstrategy) for enumerating between different Pauli string orderings. This is mostly helpful when used alongside graph coloring and can be used as arguments in both the `generate_xyz_hamiltonian()` and `generate_time_evolution_circuit()` functions.\n",
     "\n",
     "\n",
     "\n",
     "### Graph coloring\n",
     "\n",
-    "The [`qiskit_addon_utils.coloring`](../api/qiskit-addon-utils/coloring) module is used to color the edges in a coupling map and use this coloring to more efficiently place gates in a quantum circuit. The purpose of this edge colored coupling map is to find a set of edge colors such that no two edges of the same color share a common node. For a QPU, this means that gates along like-colored edges (qubit connections) may be run simultaneously and the circuit will execute faster.\n",
+    "The [`qiskit_addon_utils.coloring`](../api/qiskit-addon-utils/coloring) module is used to color the edges in a coupling map and use this coloring to more efficiently place gates in a quantum circuit. The purpose of this edge-colored coupling map is to find a set of edge colors such that no two edges of the same color share a common node. For a QPU, this means that gates along like-colored edges (qubit connections) can be run simultaneously and the circuit will execute faster.\n",
     "\n",
     "As a quick example, you can use the [`auto_color_edges()`](../api/qiskit-addon-utils/coloring#auto_color_edges) function to generate an edge coloring for a naive circuit executing a `CZGate` along each qubit connection. The code snippet below uses the `FakeSherbrooke` backend's coupling map, creates this naive circuit, then uses the `auto_color_edges()` function to create a more efficient equivalent circuit."
    ]
@@ -121,7 +121,7 @@
    "source": [
     "### Slicing\n",
     "\n",
-    "Lastly the [`qiskit-addon-utils.slicing`](../api/qiskit-addon-utils/slicing) module contains functions and transpiler passes to work with creating circuit \"slices\", time-like partitions of a [`QuantumCircuit`](../api/qiskit/qiskit.circuit.QuantumCircuit) spanning across all qubits. These slices are primarily used for [operator backpropagation](./qiskit-addons-obp-get-started). You can read through the module's [API reference](../api/qiskit-addon-utils/slicing) for more information, but the main four ways a circuit can be sliced are by gate type, depth, coloring, or [`Barrier`](../api/qiskit/circuit#barrier) instructions. The output of these slicing functions returns a list of [`QuantumCircuit`s](../api/qiskit/qiskit.circuit.QuantumCircuit). Sliced circuits can also be recombined using the [`combine_slices()`](../api/qiskit-addon-utils/slicing#combine_slices) function.\n",
+    "Lastly, the [`qiskit-addon-utils.slicing`](../api/qiskit-addon-utils/slicing) module contains functions and transpiler passes to work with creating circuit \"slices\", time-like partitions of a [`QuantumCircuit`](../api/qiskit/qiskit.circuit.QuantumCircuit) spanning across all qubits. These slices are primarily used for [operator backpropagation](/guides/qiskit-addons-obp-get-started). The main four ways a circuit can be sliced are by gate type, depth, coloring, or [`Barrier`](../api/qiskit/circuit#barrier) instructions. The output of these slicing functions returns a list of [`QuantumCircuit`s](../api/qiskit/qiskit.circuit.QuantumCircuit). Sliced circuits can also be recombined using the [`combine_slices()`](../api/qiskit-addon-utils/slicing#combine_slices) function. Read the module's [API reference](../api/qiskit-addon-utils/slicing) for more information.\n",
     "\n",
     "Below are a few examples of how to create these slices using the following circuit:"
    ]
@@ -237,7 +237,7 @@
    "id": "57c844b5-cbe0-4369-80a6-57a2fc8840d9",
    "metadata": {},
    "source": [
-    "If your workload is designed to exploit the physical qubit connectivity of the QPU it will be run on, you can create slices based on edge coloring. The code snippet below will assign a 3-coloring to circuit edges and slice the circuit with respect to the edge coloring. (Note: this only affects non-local gates and single qubit gates will be sliced by gate type)."
+    "If your workload is designed to exploit the physical qubit connectivity of the QPU it will be run on, you can create slices based on edge coloring. The code snippet below will assign a three-coloring to circuit edges and slice the circuit with respect to the edge coloring. (Note: this only affects non-local gates. Single-qubit gates will be sliced by gate type)."
    ]
   },
   {
@@ -412,9 +412,9 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Read through the overview of the [OBP addon](./qiskit-addons-obp)\n",
-    "    - Understand how the [SQD addon](./qiskit-addons-sqd) works\n",
-    "    - Familiarize yourself with the [AQC-Tensor addon](./qiskit-addons-aqc)\n",
+    "    - Read through the overview of the [OBP addon.](/guides/qiskit-addons-obp)\n",
+    "    - Understand how the [SQD addon](/guides/qiskit-addons-sqd) works.\n",
+    "    - Familiarize yourself with the [AQC-Tensor addon.](/guides/qiskit-addons-aqc)\n",
     "</Admonition>"
    ]
   }
