--- a/docs/guides/qiskit-addons-utils.ipynb
+++ b/docs/guides/qiskit-addons-utils.ipynb
@@ -332,7 +332,7 @@
    "id": "8a20a531-61dd-4461-b482-ee3223b6223d",
    "metadata": {},
    "source": [
-    "Once the barriers are in place you can examine each of the slices individually."
+    "Once the barriers are in place, you can examine each of the slices individually."
    ]
   },
   {
